--- a/packages/fed-utils/package.json
+++ b/packages/fed-utils/package.json
@@ -8,9 +8,7 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "format": "prettier --write '**/*.{js,jsx,ts,tsx}'",
-    "lint": "eslint . --ext '.js,.jsx,.ts,.tsx'"
+    "build": "tsc"
   },
   "devDependencies": {
     "typescript": "^4.1.3"
