--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "packages": ["packages/*"]
   },
   "scripts": {
-    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --fix"
   },
   "husky": {
     "hooks": {
