--- a/packages/fed-react-comp/package.json
+++ b/packages/fed-react-comp/package.json
@@ -43,13 +43,11 @@
     "postcss": "^8.2.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "rimraf": "^3.0.2",
     "rollup": "^2.33.3",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.29.0",
     "sass-loader": "^10.1.1",
-    "ts-jest": "^24.2.0",
-    "typescript": "^3.7.3"
+    "ts-jest": "^24.2.0"
   },
   "peerDependencies": {
     "react": "^16.9.0",
