--- a/packages/fed-react-comp/package.json
+++ b/packages/fed-react-comp/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "antd": "^4.10.2",
-    "classnames": "^2.2.6"
+    "classnames": "^2.2.6",
+    "fed-utils": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
