fix：tree shaking config

--- a/packages/fed-react-comp/package.json
+++ b/packages/fed-react-comp/package.json
@@ -8,6 +8,10 @@
     "lib",
     "es"
   ],
+  "sideEffects": [
+    "*.scss.js",
+    "*.css.js"
+  ],
   "keywords": [],
   "author": "Fred",
   "license": "ISC",
