--- a/packages/fed-react-comp/package.json
+++ b/packages/fed-react-comp/package.json
@@ -17,8 +17,6 @@
   "license": "ISC",
   "scripts": {
     "build": "rimraf lib es && rollup -c",
-    "test": "jest",
-    "test:watch": "jest --watch",
     "storybook": "start-storybook -p 6001",
     "storybook:build": "build-storybook"
   },
@@ -34,16 +32,11 @@
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@storybook/addon-essentials": "^6.1.14",
     "@storybook/react": "^6.1.12",
-    "@testing-library/jest-dom": "^5.11.8",
-    "@testing-library/react": "^11.2.3",
     "@types/classnames": "^2.2.11",
-    "@types/jest": "^24.0.24",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "babel-loader": "^8.2.2",
     "babel-preset-react-app": "^10.0.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.9.0",
     "node-sass": "^5.0.0",
     "postcss": "^8.2.4",
     "react": "^17.0.1",
@@ -51,8 +44,7 @@
     "rollup": "^2.33.3",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.29.0",
-    "sass-loader": "^10.1.1",
-    "ts-jest": "^24.2.0"
+    "sass-loader": "^10.1.1"
   },
   "peerDependencies": {
     "react": "^16.9.0",
